--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driven-class-name=org.postgresql.Driver
 hibernate.dialect=org.hibernate.dialect.HSQLDialect
 
-spring.jpa.show-sql=true
-spring.jpa.format-sql=true
+spring.jpa.show-sql=false
+spring.jpa.format-sql=false
 
 spring.jpa.hibernate.ddl-auto=update
